--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -480,6 +480,7 @@ enable_audio_bell no
 
 # foreground #dddddd
 # background #000000
+background #171717
 
 #: The foreground and background colors
 
