Add another unused font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -19,6 +19,7 @@
 #font_family      Terminus
 #font_family      MesloLGS Nerd Font Mono
 #font_family      Hack
+#font_family      IBM Plex Mono
 #font_family      Roboto Mono Light
 #bold_font        Roboto Mono Regular
 
