--- a/.i3/config
+++ b/.i3/config
@@ -130,11 +130,13 @@ bindsym $mod+a focus parent
 
 # move the currently focused window to the scratchpad
 bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+Shift+i move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+grave scratchpad show
 bindsym $mod+minus scratchpad show
+bindsym $mod+i scratchpad show
 
 #navigate workspaces next / previous
 bindsym $mod+Ctrl+l workspace next
