--- a/.i3/config
+++ b/.i3/config
@@ -184,7 +184,8 @@ bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Toggle toolbar visibility in Chrome
-bindsym --release $mod+Shift+f exec --no-startup-id "xdotool search --onlyvisible --class google-chrome key --clearmodifiers F11 && i3-msg fullscreen disable"
+bindsym --release $mod+Shift+f \
+exec --no-startup-id "xdotool search --onlyvisible --class google-chrome key --clearmodifiers F11 && i3-msg fullscreen disable"
 
 # Send PageDown and PageUp
 bindsym --release $mod+bracketleft exec --no-startup-id xdotool key --clearmodifiers Page_Up
