--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,24 +7,19 @@
 #: characters.
 
 #font_family      Iosevka
-#font_family      Iosevka Light
 #font_family      M+ 1m
-#font_family      M+ 1m light
-#font_family      Source Code Pro Light
+#font_family      Source Code Pro
 #font_family      Envy Code R
 #font_family      Fira Code
-#font_family      Fira Code Retina
-#font_family      Fira Code Light
 #font_family      Monoid Retina
 #font_family      Terminus
 #font_family      MesloLGS Nerd Font Mono
 #font_family      Hack
 #font_family      IBM Plex Mono
-#font_family      Roboto Mono Light
-#bold_font        Roboto Mono Regular
+#font_family      Roboto Mono
+#font_family      SF Mono
 
 #font_family      auto
-#font_family      Roboto Mono
 font_family      Inconsolata
 bold_font        auto
 italic_font      auto
@@ -479,9 +474,12 @@ enable_audio_bell no
 
 #: Color scheme {{{
 
+# https://github.com/dexpota/kitty-themes#installation
+include ./theme.conf
+
 # foreground #dddddd
 # background #000000
-background #171717
+# background #171717
 
 #: The foreground and background colors
 
