--- a/.i3/config
+++ b/.i3/config
@@ -8,7 +8,7 @@ set $mod Mod4
 # workspace_layout tabbed <stacking|tabbed>
 
 # Configure border style <normal|1pixel|pixel xx|none|pixel>
-default_border pixel 3
+default_border pixel 2
 default_floating_border normal
 
 # Hide borders
@@ -16,7 +16,7 @@ hide_edge_borders none
 
 # change borders
 bindsym $mod+u border none
-bindsym $mod+y border pixel 3
+bindsym $mod+y border pixel 2
 bindsym $mod+Shift+n border normal
 bindsym $mod+n exec kitty --single-instance --listen-on unix:/tmp/mykitty nvim
 
@@ -36,6 +36,7 @@ bindsym $mod+Shift+q kill
 # start program launcher
 #bindsym $mod+d exec --no-startup-id dmenu_recency
 bindsym $mod+space exec --no-startup-id rofi -show combi
+bindsym Mod1+space exec --no-startup-id rofi -dmenu | xargs -I{} xdg-open https://www.google.com/search?q={}
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -125,6 +126,9 @@ bindsym $mod+Shift+s sticky toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
+
+# focus the child container
+#bindsym $mod+d focus child
 
 # move the currently focused window to the scratchpad
 bindsym $mod+Shift+minus move scratchpad
@@ -341,7 +345,8 @@ set_from_resource $term_color15    color15
 # Start i3bar to display a workspace bar (plus the system information i3status if available)
 bar {
 	i3bar_command i3bar
-	status_command i3status
+        #status_command i3status
+        status_command i3cat
 	position bottom
 
 ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
@@ -350,20 +355,37 @@ bar {
 
 	bindsym button4 nop
 	bindsym button5 nop
-#   font xft:URWGothic-Book 11
+        #   font xft:URWGothic-Book 11
+        font pango: Inconsolata 10
 	strip_workspace_numbers yes
 
     colors {
-        background #222D31
+        #background #222D31
+        #statusline #F9FAF9
+        #separator  #454947
+        background #000000
         statusline #F9FAF9
         separator  #454947
 
-#                      border  backgr. text
-        focused_workspace  #F9FAF9 #16a085 #292F34
+        #                  border  backgr. text
+        #focused_workspace  #F9FAF9 #16a085 #292F34
+        #active_workspace   #595B5B #353836 #FDF6E3
+        #inactive_workspace #595B5B #222D31 #EEE8D5
+        #binding_mode       #16a085 #2C2C2C #F9FAF9
+        #urgent_workspace   #16a085 #FDF6E3 #E5201D
+
+        #focused_workspace  #337336 #142d16 #87ca8b
+        focused_workspace  #d17c00 #5b3900 #ffb243
         active_workspace   #595B5B #353836 #FDF6E3
         inactive_workspace #595B5B #222D31 #EEE8D5
         binding_mode       #16a085 #2C2C2C #F9FAF9
         urgent_workspace   #16a085 #FDF6E3 #E5201D
+
+#  border  bg        text
+# #337336 #142d16 #87ca8b
+# #d17c00 #5b3900 #ffb243
+# #bc105d #3c0719 #f160a1
+
     }
 }
 
@@ -371,12 +393,19 @@ bar {
 bindsym $mod+m bar mode toggle
 
 # Theme colors
+# Wallpaper color (default for nitrogen): #002A36
 # class                   border  backgr. text    indic.   child_border
   client.focused          #556064 #556064 #80FFF9 #FDF6E3
   client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
   client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
   client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
   client.placeholder      #000000 #0c0c0c #ffffff #000000 
+
+  #client.focused          #000000 #000000 #DDDDDD #DDDDDD
+  #client.focused_inactive #BBBBBB #BBBBBB #1ABC9C #454948
+  #client.unfocused        #DDDDDD #DDDDDD #1ABC9C #454948
+  #client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
+  #client.placeholder      #000000 #0c0c0c #ffffff #000000 
 
   client.background       #2B2C2B
 
@@ -436,3 +465,5 @@ mode "$mode_gaps_outer" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
+
+# vim: filetype=i3config
