--- a/.i3status.conf
+++ b/.i3status.conf
@@ -7,8 +7,9 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
+        output_format = i3bar
         colors = true
-        interval = 5
+        interval = 1
         color_good = "#2AA198"
         color_bad = "#586E75"
         color_degraded = "#DC322F"
@@ -16,13 +17,13 @@ general {
 
 # order += "ipv6"
 order += "cpu_usage"
-order += "disk /"
+#order += "disk /"
 # order += "disk /home"
-order += "wireless _first_"
-order += "ethernet _first_"
+#order += "wireless _first_"
+#order += "ethernet _first_"
 order += "battery all"
 # order += "load"
-order += "memory"
+#order += "memory"
 order += "tztime local"
 
 cpu_usage {
@@ -58,8 +59,8 @@ battery all {
         status_bat = ""
         # status_unk = "?"
         status_unk = ""
-        # status_full = ""
-        status_full = "☻"
+        status_full = "+"
+        #status_full = "☻"
         low_threshold = 15
         threshold_type = time
 }
