--- a/.i3/config
+++ b/.i3/config
@@ -348,6 +348,8 @@ bar {
         #status_command i3status
         status_command i3cat
 	position bottom
+        modifier none
+
 
 ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
 #	tray_output primary
@@ -395,17 +397,17 @@ bindsym $mod+m bar mode toggle
 # Theme colors
 # Wallpaper color (default for nitrogen): #002A36
 # class                   border  backgr. text    indic.   child_border
-  client.focused          #556064 #556064 #80FFF9 #FDF6E3
-  client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
-  client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
-  client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
-  client.placeholder      #000000 #0c0c0c #ffffff #000000 
-
-  #client.focused          #000000 #000000 #DDDDDD #DDDDDD
-  #client.focused_inactive #BBBBBB #BBBBBB #1ABC9C #454948
-  #client.unfocused        #DDDDDD #DDDDDD #1ABC9C #454948
+  #client.focused          #556064 #556064 #80FFF9 #FDF6E3
+  #client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
+  #client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
   #client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
   #client.placeholder      #000000 #0c0c0c #ffffff #000000 
+
+  client.focused          #000000 #000000 #DDDDDD #DDDDDD
+  client.focused_inactive #BBBBBB #BBBBBB #1ABC9C #454948
+  client.unfocused        #DDDDDD #DDDDDD #1ABC9C #454948
+  client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
+  client.placeholder      #000000 #0c0c0c #ffffff #000000 
 
   client.background       #2B2C2B
 
