--- a/.i3/config
+++ b/.i3/config
@@ -123,6 +123,7 @@ bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+d focus mode_toggle
+bindsym $mod+grave focus mode_toggle
 
 # toggle sticky
 bindsym $mod+Shift+s sticky toggle
@@ -139,7 +140,6 @@ bindsym $mod+Shift+i move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+grave scratchpad show
 bindsym $mod+minus scratchpad show
 bindsym $mod+i scratchpad show
 
@@ -211,6 +211,7 @@ bindsym --release Mod1+l exec --no-startup-id xdotool key --clearmodifiers Right
 # assign [class="Skype"] $ws5
 
 # Open specific applications in floating mode
+for_window [class="mpv"] floating enable sticky enable
 for_window [title="alsamixer"] floating enable border pixel 1
 for_window [class="calamares"] floating enable border normal
 for_window [class="Clipgrab"] floating enable
@@ -298,7 +299,7 @@ bindsym $mod+9 exec --no-startup-id blurlock
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1; compton -b
-exec --no-startup-id manjaro-hello
+#exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
@@ -401,17 +402,26 @@ bindsym $mod+m bar mode toggle
 # Wallpaper color (default for nitrogen): #002A36
 # class                    border  backgr. text    indic.   child_border
 
+  # Dark default
   #client.focused          #556064 #556064 #80FFF9 #FDF6E3
   #client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
   #client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
   #client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
   #client.placeholder      #000000 #0c0c0c #ffffff #000000 
 
+  # Light
   client.focused          #000000 #000000 #DDDDDD #DDDDDD
   client.focused_inactive #BBBBBB #454948 #DDDDDD #454948
   client.unfocused        #DDDDDD #BBBBBB #FFFFFF #454948
   client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
   client.placeholder      #000000 #0c0c0c #ffffff #000000 
+
+  ## Nord
+  #client.focused          #DDDDDD #BBBBBB #FFFFFF #454948
+  #client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
+  #client.unfocused        #556064 #556064 #80FFF9 #FDF6E3
+  #client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
+  #client.placeholder      #000000 #0c0c0c #ffffff #000000 
 
   client.background       #2B2C2B
 
