--- a/.i3/config
+++ b/.i3/config
@@ -403,18 +403,18 @@ bindsym $mod+m bar mode toggle
 # class                    border  backgr. text    indic.   child_border
 
   # Dark default
-  #client.focused          #556064 #556064 #80FFF9 #FDF6E3
-  #client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
-  #client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
-  #client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
-  #client.placeholder      #000000 #0c0c0c #ffffff #000000 
-
-  # Light
-  client.focused          #000000 #000000 #DDDDDD #DDDDDD
-  client.focused_inactive #BBBBBB #454948 #DDDDDD #454948
-  client.unfocused        #DDDDDD #BBBBBB #FFFFFF #454948
+  client.focused          #556064 #556064 #80FFF9 #FDF6E3
+  client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
+  client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
   client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
   client.placeholder      #000000 #0c0c0c #ffffff #000000 
+
+  ## Light
+  #client.focused          #000000 #000000 #DDDDDD #DDDDDD
+  #client.focused_inactive #BBBBBB #454948 #DDDDDD #454948
+  #client.unfocused        #DDDDDD #BBBBBB #FFFFFF #454948
+  #client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
+  #client.placeholder      #000000 #0c0c0c #ffffff #000000 
 
   ## Nord
   #client.focused          #DDDDDD #BBBBBB #FFFFFF #454948
