Use kitty.conf generated by kitty-cat

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,26 +1,15 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
+# include colorscheme
+include colors.conf
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-#font_family      Iosevka
-#font_family      M+ 1m
-#font_family      Source Code Pro
-#font_family      Envy Code R
-#font_family      Fira Code
-#font_family      Monoid Retina
-#font_family      Terminus
-#font_family      MesloLGS Nerd Font Mono
-#font_family      Hack
-#font_family      IBM Plex Mono
-#font_family      Roboto Mono
-#font_family      SF Mono
-
-#font_family      auto
-font_family      Inconsolata
+font_family      Iosevka Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -40,6 +29,26 @@ bold_italic_font auto
 font_size 10.0
 
 #: Font size (in pts)
+
+# force_ltr no
+
+#: kitty does not support BIDI (bidirectional text), however, for RTL
+#: scripts, words are automatically displayed in RTL. That is to say,
+#: in an RTL script, the words "HELLO WORLD" display in kitty as
+#: "WORLD HELLO", and if you try to select a substring of an RTL-
+#: shaped string, you will get the character that would be there had
+#: the the string been LTR. For example, assuming the Hebrew word
+#: ירושלים, selecting the character that on the screen appears to be ם
+#: actually writes into the selection buffer the character י.
+
+#: kitty's default behavior is useful in conjunction with a filter to
+#: reverse the word order, however, if you wish to manipulate RTL
+#: glyphs, it can be very challenging to work with, so this option is
+#: provided to turn it off. Furthermore, this option can be used with
+#: the command line program GNU FriBidi
+#: <https://github.com/fribidi/fribidi#executable> to get BIDI
+#: support, because it will force kitty to always treat the text as
+#: LTR, which FriBidi expects for terminals.
 
 adjust_line_height  0
 adjust_column_width 0
@@ -77,6 +86,53 @@ adjust_column_width 0
 #:     map alt+2 disable_ligatures_in all never
 #:     map alt+3 disable_ligatures_in tab cursor
 
+# font_features none
+
+#: Choose exactly which OpenType features to enable or disable. This
+#: is useful as some fonts might have features worthwhile in a
+#: terminal. For example, Fira Code Retina includes a discretionary
+#: feature, zero, which in that font changes the appearance of the
+#: zero (0), to make it more easily distinguishable from Ø. Fira Code
+#: Retina also includes other discretionary features known as
+#: Stylistic Sets which have the tags ss01 through ss20.
+
+#: Note that this code is indexed by PostScript name, and not the font
+#: family. This allows you to define very precise feature settings;
+#: e.g. you can disable a feature in the italic font but not in the
+#: regular font.
+
+#: To get the PostScript name for a font, use kitty + list-fonts
+#: --psnames::
+
+#:     $ kitty + list-fonts --psnames | grep Fira
+#:     Fira Code
+#:     Fira Code Bold (FiraCode-Bold)
+#:     Fira Code Light (FiraCode-Light)
+#:     Fira Code Medium (FiraCode-Medium)
+#:     Fira Code Regular (FiraCode-Regular)
+#:     Fira Code Retina (FiraCode-Retina)
+
+#: The part in brackets is the PostScript name.
+
+#: Enable alternate zero and oldstyle numerals::
+
+#:     font_features FiraCode-Retina +zero +onum
+
+#: Enable only alternate zero::
+
+#:     font_features FiraCode-Retina +zero
+
+#: Disable the normal ligatures, but keep the calt feature which (in
+#: this font) breaks up monotony::
+
+#:     font_features TT2020StyleB-Regular -liga +calt
+
+#: In conjunction with force_ltr, you may want to disable Arabic
+#: shaping entirely, and only look at their isolated forms if they
+#: show up in a document. You can do this with e.g.::
+
+#:     font_features UnifontMedium +isol -medi -fina -init
+
 # box_drawing_scale 0.001, 1, 1.5, 2
 
 #: Change the sizes of the lines used for the box drawing unicode
@@ -88,22 +144,21 @@ adjust_column_width 0
 
 #: Cursor customization {{{
 
-cursor #BBBBBB
-#cursor #888888
+#cursor #cccccc
 
 #: Default cursor color
-cursor_text_color #111111
-#cursor_text_color #000000
+
+#cursor_text_color #111111
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-# cursor_shape block
+cursor_shape block
 
 #: The cursor shape can be one of (block, beam, underline)
 
-cursor_blink_interval 0
+ cursor_blink_interval 0
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
@@ -119,7 +174,7 @@ cursor_blink_interval 0
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 2000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -168,10 +223,12 @@ cursor_blink_interval 0
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
 #: Set to a negative value to hide the mouse cursor immediately when
-#: typing text.
+#: typing text. Disabled by default on macOS as getting it to work
+#: robustly with the ever-changing sea of bugs that is Cocoa is too
+#: much effort.
 
-# url_color #0087bd
-# url_style curly
+url_color #0087bd
+url_style single
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, single, double, curly
@@ -239,7 +296,7 @@ cursor_blink_interval 0
 # pointer_shape_when_grabbed arrow
 
 #: The shape of the mouse pointer when the program running in the
-#: terminal grabs the mouse.
+#: terminal grabs the mouse. Valid values are: arrow, beam and hand
 
 #: }}}
 
@@ -320,9 +377,9 @@ enable_audio_bell no
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
-#: will be used as the startup layout. For a list of available
-#: layouts, see the
-#: https://sw.kovidgoyal.net/kitty/index.html#layouts.
+#: will be used as the startup layout. Default configuration is all
+#: layouts in alphabetical order. For a list of available layouts, see
+#: the https://sw.kovidgoyal.net/kitty/index.html#layouts.
 
 # window_resize_step_cells 2
 # window_resize_step_lines 2
@@ -346,7 +403,7 @@ enable_audio_bell no
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
 
-# window_margin_width 0.0
+window_margin_width 10.0
 
 #: The window margin (in pts) (blank area outside the border)
 
@@ -391,9 +448,10 @@ enable_audio_bell no
 
 # hide_window_decorations no
 
-#: Hide the window decorations (title-bar and window borders). Whether
-#: this works and exactly what effect it has depends on the window
-#: manager/operating system.
+#: Hide the window decorations (title-bar and window borders) with
+#: yes. On macOS, titlebar-only can be used to only hide the titlebar.
+#: Whether this works and exactly what effect it has depends on the
+#: window manager/operating system.
 
 # resize_debounce_time 0.1
 
@@ -410,6 +468,15 @@ enable_audio_bell no
 #: scaled. A value of blank means draw a blank window. A value of size
 #: means show the window size in cells.
 
+# resize_in_steps no
+
+#: Resize the OS window in steps as large as the cells, instead of
+#: with the usual pixel accuracy. Combined with an
+#: initial_window_width and initial_window_height in number of cells,
+#: this option can be used to keep the margins as small as possible
+#: when resizing the OS window. Note that this does not currently work
+#: on Wayland.
+
 #: }}}
 
 #: Tab bar {{{
@@ -424,9 +491,11 @@ enable_audio_bell no
 
 # tab_bar_style fade
 
-#: The tab bar style, can be one of: fade, separator or hidden. In the
-#: fade style, each tab's edges fade into the background color, in the
-#: separator style, tabs are separated by a configurable separator.
+#: The tab bar style, can be one of: fade, separator, powerline, or
+#: hidden. In the fade style, each tab's edges fade into the
+#: background color, in the separator style, tabs are separated by a
+#: configurable separator, and the powerline shows the tabs as a
+#: continuous line.
 
 # tab_bar_min_tabs 2
 
@@ -461,6 +530,11 @@ enable_audio_bell no
 #: like: {index}: {title}. Useful if you have shortcuts mapped for
 #: goto_tab N.
 
+# active_tab_title_template none
+
+#: Template to use for active tabs, if not specified falls back to
+#: tab_title_template.
+
 # active_tab_foreground   #000
 # active_tab_background   #eee
 # active_tab_font_style   bold-italic
@@ -470,20 +544,21 @@ enable_audio_bell no
 
 #: Tab bar colors and styles
 
+# tab_bar_background none
+
+#: Background color for the tab bar. Defaults to using the terminal
+#: background color.
+
 #: }}}
 
 #: Color scheme {{{
 
-# https://github.com/dexpota/kitty-themes#installation
-include ./theme.conf
-
-# foreground #dddddd
-# background #000000
-# background #171717
+#foreground #dddddd
+#background #000000
 
 #: The foreground and background colors
 
-# background_opacity 1.0
+#background_opacity 1.0
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -566,6 +641,30 @@ include ./theme.conf
 
 #: white
 
+# mark1_foreground black
+
+#: Color for marks of type 1
+
+# mark1_background #98d3cb
+
+#: Color for marks of type 1 (light steel blue)
+
+# mark2_foreground black
+
+#: Color for marks of type 2
+
+# mark2_background #f2dcd3
+
+#: Color for marks of type 1 (beige)
+
+# mark3_foreground black
+
+#: Color for marks of type 3
+
+# mark3_background #f274bc
+
+#: Color for marks of type 1 (violet)
+
 #: }}}
 
 #: Advanced {{{
@@ -578,13 +677,13 @@ include ./theme.conf
 #: --login to ensure that the shell starts in interactive mode and
 #: reads its startup rc files.
 
-editor nvim
+# editor .
 
 #: The console editor to use when editing the kitty config file or
-#: similar tasks. A value of . means to use the environment variable
-#: EDITOR. Note that this environment variable has to be set not just
-#: in your shell startup scripts but system-wide, otherwise kitty will
-#: not see it.
+#: similar tasks. A value of . means to use the environment variables
+#: VISUAL and EDITOR in that order. Note that this environment
+#: variable has to be set not just in your shell startup scripts but
+#: system-wide, otherwise kitty will not see it.
 
 # close_on_child_death no
 
@@ -601,8 +700,13 @@ allow_remote_control yes
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
 #: to kitty windows, opening new windows, closing windows, reading the
-#: content of windows, etc. Note that this even works over ssh
-#: connections.
+#: content of windows, etc.  Note that this even works over ssh
+#: connections. You can chose to either allow any program running
+#: within kitty to control it, with yes or only programs that connect
+#: to the socket specified with the kitty --listen-on command line
+#: option, if you use the value socket-only. The latter is useful if
+#: you want to prevent programs running on a remote computer over ssh
+#: from controlling kitty.
 
 # env 
 
@@ -615,7 +719,7 @@ allow_remote_control yes
 
 #: The value of MYVAR2 will be a/<path to home directory>/b.
 
-# update_check_interval 24
+# update_check_interval 0.0
 
 #: Periodically check if an update to kitty is available. If an update
 #: is found a system notification is displayed informing you of the
@@ -660,7 +764,7 @@ allow_remote_control yes
 
 #: OS specific tweaks {{{
 
-#macos_titlebar_color background
+# macos_titlebar_color system
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
@@ -673,7 +777,7 @@ allow_remote_control yes
 #: you are probably better off just hiding the titlebar with
 #: hide_window_decorations.
 
-#macos_option_as_alt yes
+# macos_option_as_alt no
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
@@ -697,8 +801,7 @@ allow_remote_control yes
 #: Disable this if you want kitty top-level (OS) windows to not be
 #: resizable on macOS.
 
-#macos_thicken_font 0
-#macos_thicken_font 0.75
+# macos_thicken_font 0
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
@@ -817,9 +920,7 @@ allow_remote_control yes
 #: mapped to Ctrl+c. It will copy only if there is a selection and
 #: send an interrupt otherwise.
 
-# map cmd+c        copy_to_clipboard
 # map kitty_mod+v  paste_from_clipboard
-# map cmd+v        paste_from_clipboard
 # map kitty_mod+s  paste_from_selection
 # map shift+insert paste_from_selection
 # map kitty_mod+o  pass_selection_to_program
@@ -842,32 +943,24 @@ allow_remote_control yes
 #: Scrolling {{{
 
 # map kitty_mod+up        scroll_line_up
-# map alt+cmd+page_up     scroll_line_up
-# map cmd+up              scroll_line_up
 # map kitty_mod+k         scroll_line_up
 # map kitty_mod+down      scroll_line_down
 # map kitty_mod+j         scroll_line_down
-# map alt+cmd+page_down   scroll_line_down
-# map cmd+down            scroll_line_down
 # map kitty_mod+page_up   scroll_page_up
-# map cmd+page_up         scroll_page_up
 # map kitty_mod+page_down scroll_page_down
-# map cmd+page_down       scroll_page_down
 # map kitty_mod+home      scroll_home
-# map cmd+home            scroll_home
 # map kitty_mod+end       scroll_end
-# map cmd+end             scroll_end
 # map kitty_mod+h         show_scrollback
 
 #: You can pipe the contents of the current screen + history buffer as
-#: STDIN to an arbitrary program using the ``pipe`` function. For
+#: STDIN to an arbitrary program using the ``launch`` function. For
 #: example, the following opens the scrollback buffer in less in an
 #: overlay window::
 
-#:     map f1 pipe @ansi overlay less +G -R
+#:     map f1 launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R
 
 #: For more details on piping screen and buffer contents to external
-#: programs, see pipe.
+#: programs, see launch.
 
 #: }}}
 
@@ -878,84 +971,66 @@ allow_remote_control yes
 #: You can open a new window running an arbitrary program, for
 #: example::
 
-#:     map kitty_mod+y      new_window mutt
+#:     map kitty_mod+y      launch mutt
 
 #: You can open a new window with the current working directory set to
 #: the working directory of the current window using::
 
-#:     map ctrl+alt+enter    new_window_with_cwd
+#:     map ctrl+alt+enter    launch --cwd=current
 
 #: You can open a new window that is allowed to control kitty via the
 #: kitty remote control facility by prefixing the command line with @.
 #: Any programs running in that window will be allowed to control
 #: kitty. For example::
 
-#:     map ctrl+enter new_window @ some_program
+#:     map ctrl+enter launch --allow-remote-control some_program
 
 #: You can open a new window next to the currently active window or as
 #: the first window, with::
 
-#:     map ctrl+n new_window !neighbor some_program
-#:     map ctrl+f new_window !first some_program
+#:     map ctrl+n launch --location=neighbor some_program
+#:     map ctrl+f launch --location=first some_program
 
-# map cmd+enter   new_window
+#: For more details, see launch.
+
 # map kitty_mod+n new_os_window
 
 #: Works like new_window above, except that it opens a top level OS
 #: kitty window. In particular you can use new_os_window_with_cwd to
 #: open a window with the current working directory.
 
-# map cmd+n       new_os_window
 # map kitty_mod+w close_window
-# map shift+cmd+d close_window
 # map kitty_mod+] next_window
 # map kitty_mod+[ previous_window
 # map kitty_mod+f move_window_forward
 # map kitty_mod+b move_window_backward
 # map kitty_mod+` move_window_to_top
 # map kitty_mod+r start_resizing_window
-# map cmd+r       start_resizing_window
 # map kitty_mod+1 first_window
-# map cmd+1       first_window
 # map kitty_mod+2 second_window
-# map cmd+2       second_window
 # map kitty_mod+3 third_window
-# map cmd+3       third_window
 # map kitty_mod+4 fourth_window
-# map cmd+4       fourth_window
 # map kitty_mod+5 fifth_window
-# map cmd+5       fifth_window
 # map kitty_mod+6 sixth_window
-# map cmd+6       sixth_window
 # map kitty_mod+7 seventh_window
-# map cmd+7       seventh_window
 # map kitty_mod+8 eighth_window
-# map cmd+8       eighth_window
 # map kitty_mod+9 ninth_window
-# map cmd+9       ninth_window
 # map kitty_mod+0 tenth_window
 #: }}}
 
 #: Tab management {{{
 
 # map kitty_mod+right next_tab
-# map ctrl+tab        next_tab
-# map shift+cmd+]     next_tab
 # map kitty_mod+left  previous_tab
-# map shift+ctrl+tab  previous_tab
-# map shift+cmd+[     previous_tab
 # map kitty_mod+t     new_tab
-# map cmd+t           new_tab
 # map kitty_mod+q     close_tab
-# map cmd+w           close_tab
 # map kitty_mod+.     move_tab_forward
 # map kitty_mod+,     move_tab_backward
 # map kitty_mod+alt+t set_tab_title
-# map shift+cmd+i     set_tab_title
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
-#: tab::
+#: tab, and any number larger than the last tab being the last tab::
 
 #:     map ctrl+alt+1 goto_tab 1
 #:     map ctrl+alt+2 goto_tab 2
@@ -987,17 +1062,14 @@ allow_remote_control yes
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
 
-# map kitty_mod+equal     change_font_size all +2.0
-# map cmd+plus            change_font_size all +2.0
-# map kitty_mod+minus     change_font_size all -2.0
-map ctrl+minus           change_font_size all -2.0
+map kitty_mod+equal     change_font_size current +1.0
+map kitty_mod+minus     change_font_size current -1.0
 # map kitty_mod+backspace change_font_size all 0
-# map cmd+0               change_font_size all 0
-map ctrl+equal            change_font_size all +2.0
 
 #: To setup shortcuts for specific font sizes::
 
 #:     map kitty_mod+f6 change_font_size all 10.0
+map kitty_mod+backspace change_font_size current 10.0
 
 #: To setup shortcuts to change only the current OS window's font
 #: size::
@@ -1040,6 +1112,11 @@ map ctrl+equal            change_font_size all +2.0
 #: Select something that looks like a hash and insert it into the
 #: terminal. Useful with git, which uses sha1 hashes to identify
 #: commits
+
+# map kitty_mod+p>n kitten hints --type linenum
+
+#: Select something that looks like filename:linenum and open it in
+#: vim at the specified line number.
 
 
 #: The hints kitten has many more modes of operation that you can map
