--- a/.i3/config
+++ b/.i3/config
@@ -288,6 +288,13 @@ mode "resize" {
         bindsym Down resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
 
+        # move focused window
+        bindsym $mod+Shift+h move left 80 px
+        bindsym $mod+Shift+j move down 80 px
+        bindsym $mod+Shift+k move up 80 px
+        bindsym $mod+Shift+l move right 80 px
+
+
         # exit resize mode: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
@@ -298,7 +305,7 @@ bindsym $mod+9 exec --no-startup-id blurlock
 
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id nitrogen --restore; sleep 1; compton -b
+#exec --no-startup-id nitrogen --restore; sleep 1; compton -b
 #exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
