--- a/.i3/config
+++ b/.i3/config
@@ -143,9 +143,11 @@ bindsym $mod+Shift+i move scratchpad
 bindsym $mod+minus scratchpad show
 bindsym $mod+i scratchpad show
 
-#navigate workspaces next / previous
-bindsym $mod+Ctrl+l workspace next
-bindsym $mod+Ctrl+h workspace prev
+#navigate workspaces next / previous & show notification
+bindsym $mod+Ctrl+h workspace prev;\
+exec "dunstify -t 2000 -h string:x-canonical-private-synchronous:workspace $(i3-msg -t get_workspaces | jq -r '.[] | select(.focused==true).name')"
+bindsym $mod+Ctrl+l workspace next;\
+exec "dunstify -t 2000 -h string:x-canonical-private-synchronous:workspace $(i3-msg -t get_workspaces | jq -r '.[] | select(.focused==true).name')"
 
 # Workspace names
 # to display names or symbols instead of plain workspace numbers you can use
