--- a/.i3/config
+++ b/.i3/config
@@ -324,6 +324,7 @@ exec --no-startup-id clipit
 exec --no-startup-id xautolock -time 10 -locker blurlock
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
+exec --no-startup-id batterynotify
 
 # Rebind capslock and return 
 exec --no-startup-id "xcape -e 'Control_L=Escape;Control_R=Return'"
