Update charging icon

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -47,7 +47,7 @@ ethernet _first_ {
 }
 
 battery all {
-        # format = "%status %percentage %remaining %emptytime"
+        #format = "%status %percentage %remaining %emptytime"
         format = " %status %percentage"
         format_down = "No battery"
         last_full_capacity = true
@@ -55,8 +55,9 @@ battery all {
         # status_chr = ""
         status_chr = "⚡"
         # status_bat = "bat"
-        # status_bat = "☉"
-        status_bat = ""
+        status_bat = "☉"
+        #status_bat = ""
+        #status_bat = ""
         # status_unk = "?"
         status_unk = ""
         status_full = "+"
