Add colorscheme, scroll binds, and font variant

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,12 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
 # include colorscheme
-include colors.conf
+
+# Colors set by kitty-cat
+# include colors.conf 
+
+# Colors set manually
+include theme.conf   
 
 #: Fonts {{{
 
@@ -9,7 +14,8 @@ include colors.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Iosevka Nerd Font
+#font_family      Iosevka Nerd Font
+font_family      Iosevka
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -951,6 +957,8 @@ allow_remote_control yes
 # map kitty_mod+home      scroll_home
 # map kitty_mod+end       scroll_end
 # map kitty_mod+h         show_scrollback
+map kitty_mod+[   scroll_page_up
+map kitty_mod+]   scroll_page_down
 
 #: You can pipe the contents of the current screen + history buffer as
 #: STDIN to an arbitrary program using the ``launch`` function. For
