Set python interpreter and limit number of options shown in pmenu

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,3 +1,4 @@
 {
-    "suggest.maxCompleteItemCount": 15
+    "suggest.maxCompleteItemCount": 15,
+    "python.setInterpreter": "/home/enovid/.env/bin/python3"
 }
