--- a/.i3status.conf
+++ b/.i3status.conf
@@ -17,7 +17,7 @@ general {
 
 # order += "ipv6"
 order += "cpu_usage"
-order += "disk /"
+#order += "disk /"
 #order += "disk /home"
 #order += "wireless _first_"
 #order += "ethernet _first_"
@@ -27,7 +27,7 @@ order += "battery all"
 order += "tztime local"
 
 cpu_usage {
-        format = " cpu  %usage "
+        format = " cpu %usage "
 }
 
 load {
@@ -48,15 +48,13 @@ ethernet _first_ {
 
 battery all {
         #format = "%status %percentage %remaining %emptytime"
-        format = " %status %percentage"
-        format_down = "No battery"
-        last_full_capacity = true
-        integer_battery_capacity = true
+        format = " %status %percentage "
+        format_down = "No battery" last_full_capacity = true integer_battery_capacity = true
         # status_chr = ""
         status_chr = "⚡"
         # status_bat = "bat"
-        status_bat = "☉"
-        #status_bat = ""
+        #status_bat = "☉"
+        status_bat = "-"
         #status_bat = ""
         # status_unk = "?"
         status_unk = ""
@@ -74,6 +72,6 @@ memory {
 
 tztime local {
         # format = "%Y-%m-%d %H:%M:%S"
-        format = " %m.%d. %I:%M "
+        format = " %a %m.%d  %I:%M "
 }
 
