--- a/.i3/config
+++ b/.i3/config
@@ -47,7 +47,7 @@ bindsym $mod+z exec --no-startup-id morc_menu
 
 exec --no-startup-id volumeicon
 #bindsym $mod+Ctrl+m exec kitty -e 'alsamixer'
-exec --no-startup-id pulseaudio
+#exec --no-startup-id pulseaudio
 #exec --no-startup-id pa-applet
 bindsym $mod+Ctrl+m exec pavucontrol
 
@@ -455,16 +455,18 @@ bindsym $mod+m bar mode toggle
   #set_from_resource $indicator       i3wm.indicator         #DDDDDD
 
   # Set colors from Xresources (default dark)
-  set_from_resource $focused         i3wm.focused           #556064
-  set_from_resource $focusedInactive i3wm.focusedInactive   #2F3D44
-  set_from_resource $unfocused       i3wm.unfocused         #2F3D44
-  set_from_resource $text            i3wm.text              #80FFF9
-  set_from_resource $indicator       i3wm.indicator         #FDF6E3
+  set_from_resource $focused             i3wm.focused             #556064
+  set_from_resource $focusedInactive     i3wm.focusedInactive     #2F3D44
+  set_from_resource $unfocused           i3wm.unfocused           #2F3D44
+  set_from_resource $textFocused         i3wm.textFocused         #80FFF9
+  set_from_resource $textFocusedInactive i3wm.textFocusedInactive #80FFF9
+  set_from_resource $textUnfocused       i3wm.textUnfocused       #80FFF9
+  set_from_resource $indicator           i3wm.indicator           #FDF6E3
 
-  # class                 border           backgr.          text   indicator 
-  client.focused          $focused         $focused         $text  $indicator       
-  client.focused_inactive $focusedInactive $focusedInactive $text  $indicator       
-  client.unfocused        $unfocused       $unfocused       $text  $indicator       
+  # class                 border           backgr.          text                 indicator 
+  client.focused          $focused         $focused         $textFocused         $indicator
+  client.focused_inactive $focusedInactive $focusedInactive $textFocusedInactive $indicator
+  client.unfocused        $unfocused       $unfocused       $textUnfocused       $indicator
 
   ## class                 border  backgr. text indicator child_border
   #client.urgent           $bg     $bg     $fg  $bg       $bg
